@@ -3,7 +3,7 @@ ksh 93u+m general copyright notice
 ########################################################################
 #                                                                      #
 #                   The KornShell 93u+m distribution                   #
-#          Copyright (c) 2020-2022 Contributors to ksh 93u+m           #
+#          Copyright (c) 2020-2023 Contributors to ksh 93u+m           #
 #                    <https://github.com/ksh93/ksh>                    #
 #             Derived from AT&T's ast package (see below)              #
 #       Licensed under the Eclipse Public License, Version 2.0         #
@@ -22,11 +22,11 @@ ksh 93u+m general copyright notice
 #               K. Eugene Carlson <kvngncrlsn@gmail.com>               #
 #          atheik <14833674+atheik@users.noreply.github.com>           #
 #                Ryan Schmidt <ryandesign@macports.org>                #
+#                      Phi <phi.debian@gmail.com>                      #
 #                   Chase <nicetrynsa@protonmail.ch>                   #
 #               Vincent Mihalkovic <vmihalko@redhat.com>               #
 #                      Trey Valenta <t@trey.net>                       #
 #  Sterling Jensen <5555776+sterlingjensen@users.noreply.github.com>   #
-#                      Phi <phi.debian@gmail.com>                      #
 #                   Marc Wilson <posguy99@gmail.com>                   #
 #                 Harald van Dijk <harald@gigawatt.nl>                 #
 #                Govind Kamat <govind_kamat@yahoo.com>                 #
