@@ -3,7 +3,7 @@
 #               This software is part of the ast package               #
 #          Copyright (c) 1982-2012 AT&T Intellectual Property          #
 #                    Copyright (c) 2012 Roland Mainz                   #
-#          Copyright (c) 2020-2022 Contributors to ksh 93u+m           #
+#          Copyright (c) 2020-2023 Contributors to ksh 93u+m           #
 #                      and is licensed under the                       #
 #                 Eclipse Public License, Version 2.0                  #
 #                                                                      #
@@ -15,6 +15,7 @@
 #                Roland Mainz <roland.mainz@nrubsig.org>               #
 #            Johnothan King <johnothanking@protonmail.com>             #
 #                  Martijn Dekker <martijn@inlv.org>                   #
+#                      Phi <phi.debian@gmail.com>                      #
 #                                                                      #
 ########################################################################
 
@@ -1063,6 +1064,13 @@ EOF
 	[[ $exp == "$got" ]] || err_exit "Compound variable \$context is not printed with 'print -v'." \
 		$'Diff follows:\n'"$(diff -u <(print -r -- "$exp") <(print -r -- "$got") | sed $'s/^/\t| /')"
 fi
+
+# ======
+
+# https://github.com/ksh93/ksh/issues/577
+# https://github.com/ksh93/ksh/pull/581
+[[ "[a] b [c] d" =~ ^\[[^]]+\] ]]
+[[ ${.sh.match} == '[a]' ]] || err_exit 'pattern ^\[[^]]+ broken'
 
 # ======
 exit $((Errors<125?Errors:125))
